- + link_texture
- + link_workspace
- + link_world
- Changed 'append' and 'link' functions to now also support lists of strings to bring multiple things in at once.
- Added category: FAKE USERS
- + set_fake_user
- + use_fake_user
- + select_objects created as plural version of select_object
- Fixed get_objects not constructing list of object references when given list of string names.

[ JYoshi ]
- Included new handling in get_nodes.
- Included new handling in fix_node_duplicates.

[ Yohello ]
(C Note: Some changes made to naming from contributions to make more consistent with module.)
- + collision_use
- + collision_field_absorption
- + collision_particle_permeability
- + collision_particle_stickiness
- + collision_particle_kill
- + collision_particle_friction
- + collision_particle_friction_random
- + collision_particle_damping
- + collision_particle_damping_random
- + collision_soft_cloth_damping
- + collision_soft_cloth_friction
- + collision_soft_cloth_thick_out
- + collision_soft_cloth_thick_in
- + collision_soft_cloth_single_side
- + collision_soft_cloth_override_normals

=== 0.1.2 ===

[ Curtis Holt ]
- get_material now returns a reference to first material on active object if no arguments are provided.
- + remove_materials
- + remove_all_materials
- + set_fluid_type
    (Removed Functions)
    x set_fluid_type_none
    x set_fluid_type_domain
    x set_fluid_type_flow
    x set_fluid_type_effector
- + fluid_set_flow_type - Simplified function for setting the type of flow.
    Allowed arguments are: SMOKE, FIRE, BOTH, FIRE_SMOKE, SMOKE_FIRE, LIQUID
    (Removed Functions)
    x flow_type_set_smoke
    x flow_type_set_fire
    x flow_type_set_fire_smoke
    x flow_type_set_fluid
- + fluid_set_domain_type - Simplified function for setting the type of domain.
    Allowed arguments are: GAS, LIQUID
    (Removed Functions)
    x fluid_domain_set_gas
    x fluid_domain_set_liquid